--- a/cases/flower-shop/index.html
+++ b/cases/flower-shop/index.html
@@ -494,7 +494,7 @@
                <main class="Mainstyle__Main-sc-159fhha-0 kpAHLJ">
                   <section id="case-hero">
                      <div class="wrapper__main_inner-sc-d7vgux-0 CaseHerostyle__MainInner-sc-1828vw4-0 fhPlTV">
-                        <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/study.jpg" alt="" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
+                        <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/flowe.jpg" alt="" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
                        
                         <div class="CaseHerostyle__Content-sc-1828vw4-8 eiRjlN">
                            <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">E-Commerce plattform</h1>
@@ -648,7 +648,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">App</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Föda utan rädsla-metoden blir digital</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">En användarvänlig reseapplikation</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
