--- a/cases/movie-explore/index.html
+++ b/cases/movie-explore/index.html
@@ -497,8 +497,8 @@
                         <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/movie.png" alt="" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
                       
                         <div class="CaseHerostyle__Content-sc-1828vw4-8 eiRjlN">
-                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">En innovativ plattform som gör det enkelt att upptäcka favoritfilmer</h1>
-                           <p class="text__paragraph-sc-1xracbr-7 CaseHerostyle__Paragraph-sc-1828vw4-10 kITvjv kbAXrW">Vi är entusiastiska över att introducera ett av våra framstående projekt - Movie Explorer. Denna banbrytande plattform är skapad med syfte att radikalt omdefiniera användarnas upplevelse av att upptäcka och engagera sig med populära filmer. Med fokus på innovation erbjuder Movie Explorer en intuitiv resa genom filmvärlden, designad för att göra utforskningen av filmer enkel och njutbar för användare med olika intressen. </p>
+                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">Movie Explorer</h1>
+                           <p class="text__paragraph-sc-1xracbr-7 CaseHerostyle__Paragraph-sc-1828vw4-10 kITvjv kbAXrW">Vi är entusiastiska över att introducera ett av våra framstående projekt - Movie Explorerr. Denna banbrytande plattform är skapad med syfte att radikalt omdefiniera användarnas upplevelse av att upptäcka och engagera sig med populära filmer. Med fokus på innovation erbjuder Movie Explorerr en intuitiv resa genom filmvärlden, designad för att göra utforskningen av filmer enkel och njutbar för användare med olika intressen. </p>
                         </div>
                      </div>
                   </section>
@@ -528,7 +528,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">UTVECKLING & DESIGN:  </h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Movie Explorer representerar fusionen av tekniskt kunnande och designexcellens för att skapa en oöverträffad plattform för filmupptäckt. Byggt med JavaScript och React.js, framhäver applikationen responsivitet och mångsidighet. Dess tekniska grund möjliggör smidig användning och innovativa funktioner. Å andra sidan är designen inte bara visuellt tilltalande utan också en nyckelkomponent för att skapa en engagerande användarupplevelse. Balanserade färgpaletter och enhetliga designelement ger applikationen en estetisk lockelse, medan användarcentrerad interaktion och responsiv design ger en intuitiv och sömlös upplevelse för användarna. Movie Explorer strävar efter att vara framåtblickande, redo att anpassa sig till framtidens behov inom filmvärlden och erbjuder därmed inte bara en tekniskt avancerad plattform utan även en visuellt tilltalande och användarvänlig upplevelse. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Movie Explorerr representerar fusionen av tekniskt kunnande och designexcellens för att skapa en oöverträffad plattform för filmupptäckt. Byggt med JavaScript och React.js, framhäver applikationen responsivitet och mångsidighet. Dess tekniska grund möjliggör smidig användning och innovativa funktioner. Å andra sidan är designen inte bara visuellt tilltalande utan också en nyckelkomponent för att skapa en engagerande användarupplevelse. Balanserade färgpaletter och enhetliga designelement ger applikationen en estetisk lockelse, medan användarcentrerad interaktion och responsiv design ger en intuitiv och sömlös upplevelse för användarna. Movie Explorerr strävar efter att vara framåtblickande, redo att anpassa sig till framtidens behov inom filmvärlden och erbjuder därmed inte bara en tekniskt avancerad plattform utan även en visuellt tilltalande och användarvänlig upplevelse. </p>
                               
                            </div>
                         </div>
@@ -549,7 +549,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Integration</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Alexander White låter bilderna tala</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Det moderna kaféet</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
@@ -576,7 +576,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Webbplats</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">The Good Talents får talanger att lyfta</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">E-handelsapplikation</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
