--- a/hallbarhet/index.html
+++ b/hallbarhet/index.html
@@ -524,7 +524,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">System</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Ny psykologplattform för Bonliva Care</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">En plattform som möjliggör en smart hotelupplevelse</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -549,7 +549,7 @@
                               </a>
                            </div>
                            <div class="CaseGridstyle__ThreeCases-sc-l5243z-7 eMNpTp">
-                              <a href="resturant/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="restaurang/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/web-developer.jpg" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -557,7 +557,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">System</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Datahantering</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Vi hjälper resturant att digitalisera välfärden</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Vi hjälper restaurang att digitalisera välfärden</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -581,14 +581,14 @@
                                  </div>
                               </a>
                               <a href="reseplanerare/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
-                                 <img src="/Images/ui-design.avif" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
+                                 <img src="/Images/travel.jpg" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">App</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Föda utan rädsla-metoden blir digital</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">En användarvänlig reseapplikation</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -646,7 +646,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Integration</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Alexander White låter bilderna tala</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Det moderna kaféet</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -695,7 +695,7 @@
                            </div>
                            <div class="CaseGridstyle__ThreeCases-sc-l5243z-7 eMNpTp">
                               <a href="Äventyrsappen/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
-                                 <img src="/Images/app-three.avif" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
+                                 <img src="/Images/out-one.png" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
@@ -703,7 +703,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Webbshop</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Skräddarsydd site för skräddarsydda möbler</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Spännande Äventyrsappen</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -727,7 +727,7 @@
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
-                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Tech-team</p>
+                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">SPEL</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">System</p>
                                     </div>
                                     <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Vårt tech-team underlättar livsviktiga leveranser</h5>
@@ -754,7 +754,7 @@
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
-                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Webbplats</p>
+                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">SPEL</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
                                     <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Digital plattform för uthyrning av unika fotomiljöer</h5>
@@ -779,14 +779,14 @@
                            </div>
                            <div class="CaseGridstyle__TwoCasesLeft-sc-l5243z-6 kfYzHx">
                               <a href="mobilförsäljning/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
-                                 <img src="/Images/application-three.jpg" alt="The Good Talents" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
+                                 <img src="/Images/phone.jpg" alt="The Good Talents" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Webbplats</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">The Good Talents får talanger att lyfta</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">E-handelsapplikation</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -818,7 +818,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Bildbank</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">PR-byrån fick en ny, marknadsundersöknings design</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Marknadsundersöknings plattform</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
