--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -397,7 +397,7 @@
       <div id="___gatsby">
          <div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper">
             <aside class="Sidebarstyle__Sidebar-sc-15kdzzt-0 cEABF">
-               <p class="text__detail_text-sc-1xracbr-11 Sidebarstyle__Title-sc-15kdzzt-1 gyZFdf kBomLS">Senaste nytt</p>
+               <p class="text__detail_text-sc-1xracbr-11 Sidebarstyle__Title-sc-15kdzzt-1 gyZFdf kBomLS">Om oss</p>
             </aside>
             <div class="Bodystyle__Body-sc-15846tj-0 kAxvFw">
                <div class="Headerstyle__Header-sc-11sf5xg-0 gzTbnY">
