--- a/cases/index.html
+++ b/cases/index.html
@@ -504,7 +504,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Webbshop</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">En innovativ plattform som gör det enkelt att upptäcka favoritfilmer</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Movie Explorer</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -557,7 +557,7 @@
                               </a>
                            </div>
                            <div class="CaseGridstyle__ThreeCases-sc-l5243z-7 eMNpTp">
-                              <a href="resturant/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="restaurang/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/meal.jpg" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -565,7 +565,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">System</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Datahantering</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">En Helhetslösning för en Modern Restaurang.</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU"> Modern restaurang </h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -596,7 +596,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">App</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">En användarvänlig Reseplanerare</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Reseplanerare</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
