--- a/cases/reseplanerare/index.html
+++ b/cases/reseplanerare/index.html
@@ -659,8 +659,8 @@
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
-                                    <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Webbplats</p>
-                                    <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
+                                    <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">SPEL</p>
+                                    <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                  </div>
                                  <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Digital plattform för uthyrning av unika fotomiljöer</h5>
                               </div>
