--- a/index.html
+++ b/index.html
@@ -541,16 +541,8 @@
                            <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
                            <picture>
-                              <source type="image/webp" srcSet="/static/96e8f50d8f8bcbd6557b1ee283cae303/15b88/Qte_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/2aabd/Qte_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3e61/Qte_logo-original_white.webp 1108w" sizes="100vw"/>
-                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png 1108w" alt="logo"/>
-                           </picture>
-                           <noscript>
-                              <picture>
-                                 <source type="image/webp" srcSet="/static/96e8f50d8f8bcbd6557b1ee283cae303/15b88/Qte_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/2aabd/Qte_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3e61/Qte_logo-original_white.webp 1108w" sizes="100vw"/>
-                                 <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png 1108w" alt="logo"/>
-                              </picture>
-                           </noscript>
-                           <script type="module">const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}</script>
+                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png" alt="logo"/>
+                           </picture>     
                         </div>
                      </a>
                      <a href="kontakta-oss/index.html" target="" class="Headerstyle__Cta-sc-11sf5xg-17 hvhSAY">Kontakta oss</a>
