--- a/vara-tjanster/cyber-security/index.html
+++ b/vara-tjanster/cyber-security/index.html
@@ -663,7 +663,7 @@
                         <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 gnqhWj hvPxKv">Som digitala designers skapar vi fantastiska användarupplevelser för appar, webbplatser, plattformar och system. Oavsett om du snabbt behöver en enkel kampanjsida eller ska skapa en helt ny app kommer våra designers ta dig med på resan från de första skisserna till en klickbar prototyp. Här kan du ta en titt på några av de design-case vi är extra stolta över:</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
                            <a href="../../cases/Äventyrsappen/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/ui-design.avif" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                              <img src="/Images/out-one.png" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
@@ -671,7 +671,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Webbshop</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Skräddarsydd site för skräddarsydda möbler</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Spännande Äventyrsappen</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
@@ -698,7 +698,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">App</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Föda utan rädsla-metoden blir digital</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">En användarvänlig reseapplikation</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
@@ -722,7 +722,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Bildbank</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">PR-byrån fick en ny, marknadsundersöknings design</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Marknadsundersöknings plattform</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
@@ -760,7 +760,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h4 class="text__heading_md-sc-1xracbr-4 TextRowsstyle__SizeH4-sc-f5buiq-9 iHfDNo CuLUy">Incidenthantering:</h4>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vid en säkerhetsincident agerar våra specialister snabbt och effektivt för att minimera skador. Från att isolera angreppet till att analysera angreppsmetoder och implementera nödvändiga åtgärder, arbetar vi målresturantt för att återställa normal drift och säkerhet. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vid en säkerhetsincident agerar våra specialister snabbt och effektivt för att minimera skador. Från att isolera angreppet till att analysera angreppsmetoder och implementera nödvändiga åtgärder, arbetar vi målrestaurangt för att återställa normal drift och säkerhet. </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
@@ -823,7 +823,7 @@
                         <div class="TextGridstyle__Content-sc-iefgbu-3 iMmAes">
                            <div class="TextGridstyle__Block-sc-iefgbu-4 gUiPoN">
                               <h5 class="text__heading_sm-sc-1xracbr-5 TextGridstyle__Subheader-sc-iefgbu-5 iehGeS"> Vad är skillnaden mellan IT-säkerhet och cybersäkerhet?</h5>
-                              <p class="text__paragraph_small-sc-1xracbr-9 TextGridstyle__Paragraph-sc-iefgbu-6 ksIOdr eJUhKU">IT-säkerhet är en bredare term som inkluderar hantering av all informationsteknologi, medan cybersäkerhet är resturantd på att skydda digitala system och data från hot och attacker online. Cybersäkerhet omfattar därmed en specifik aspekt av IT-säkerhet som fokuserar på den digitala sfären.</p>
+                              <p class="text__paragraph_small-sc-1xracbr-9 TextGridstyle__Paragraph-sc-iefgbu-6 ksIOdr eJUhKU">IT-säkerhet är en bredare term som inkluderar hantering av all informationsteknologi, medan cybersäkerhet är restaurangd på att skydda digitala system och data från hot och attacker online. Cybersäkerhet omfattar därmed en specifik aspekt av IT-säkerhet som fokuserar på den digitala sfären.</p>
                            </div>
                            <div class="TextGridstyle__Block-sc-iefgbu-4 gUiPoN">
                               <h5 class="text__heading_sm-sc-1xracbr-5 TextGridstyle__Subheader-sc-iefgbu-5 iehGeS">Hur kan jag bäst skydda mina personliga uppgifter online?</h5>
