--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                <div class="Headerstyle__Header-sc-11sf5xg-0 gzTbnY">
                   <div class="Headerstyle__Container-sc-11sf5xg-1 kuxhvl">
                      <div class="Headerstyle__Bar-sc-11sf5xg-2 gtppHt"></div>
-                     <a href="index.html">
+                     <a href="/index.html">
                         <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper Headerstyle__NewLogo-sc-11sf5xg-3 jRognm">
                            <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
